<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>parent</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <name>parent</name>
    <groupId>co.aisaac</groupId>
    <description>parent</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-cloud.version>2023.0.0</spring-cloud.version>
        <spring.version>3.2.5</spring.version>
    </properties>

    <modules>
        <module>scrapers</module>
        <module>webapp</module>
    </modules>


</project>
